# OpenglesDemo1

./: README.md  build.gradle  gradle.properties  note.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/openglesdemo1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpegSaveVideo.c  ffmpegSaveVideo.h  ffmpegTest.c  ffmpegTest.h  nativeWindow.cpp  nativeWindow.h
app/src/main/java/com/example/openglesdemo1/: BaseApplication.kt  GlobalViewModel.kt  MainActivity.kt  MainAdapter.kt  MainBean.kt
app/src/main/java/com/example/openglesdemo1/ffmpeg/: FfmpegSaveVideoUtil.kt  FfmpegUtil.java  FfmpegUtil.kt
app/src/main/java/com/example/openglesdemo1/nativegl/: NativeGl.kt
app/src/main/java/com/example/openglesdemo1/ui/: Test1Activity.kt
app/src/main/java/com/example/openglesdemo1/ui/base/: BaseActivity.kt  BaseActivity2.kt
app/src/main/java/com/example/openglesdemo1/ui/t0/: TestActivity.kt  TestRenderer.kt  TestUtil.kt
app/src/main/java/com/example/openglesdemo1/ui/t1/: HelloTriangleRender.kt  HelloTriangleRenderer.kt  TriangleActivity.kt
app/src/main/java/com/example/openglesdemo1/ui/t10/: CameraTextureRender.kt  CameraV1.kt  CameraV1Pick.kt  ICamera.kt  ITextureRenderer.kt  TextureCameraActivity.kt  TextureEGLHelper.kt
app/src/main/java/com/example/openglesdemo1/ui/t11/: Camera2Activity.kt  SizeAdapter.kt  TextureViewPreviewCamera2Activity.kt
app/src/main/java/com/example/openglesdemo1/ui/t12/: GlPreviewCameraActivity.kt  GlPreviewCameraRender.kt  RecordByCamera2Activity.kt  RecordByCameraActivity.kt  RecordByCameraRender.kt
app/src/main/java/com/example/openglesdemo1/ui/t13/: GlPreviewCameraActivity2Activity.kt  (+3 more)
app/src/main/java/com/example/openglesdemo1/utils/: AppCore.java  AppCore.kt  CommonExt.kt  ResReadUtils.kt  ShaderUtils.kt  TextureUtils.kt  ToastUtil.kt
app/src/main/res/layout/: activity_camera2.xml  activity_filter.xml  activity_gl_preview_camera_with_record.xml  activity_main.xml  activity_record_by_camera2.xml  fragment_gl_preview_camera_with_record.xml  item_size.xml
app/src/main/res/layouts/camera/layout/: activity_get_camera2_data.xml  activity_gl_preview_camera_with_record.xml  fragment_gl_preview_camera_with_record.xml
app/src/main/res/layouts/main/layout/: item_main.xml
app/src/main/res/layouts/mediacodec/layout/: activity_back_record.xml  activity_cut_video.xml  activity_mc_and_gl_play_video.xml  activity_mediacodec_play_video.xml  activity_mediacodec_save_video.xml  activity_print_media_codec.xml  activity_video_player.xml  item_video.xml  layout_local_spinner.xml
app/src/main/res/layouts/mytest1/layout/: activity_mytest1.xml
app/src/main/res/layouts/normal/layout/: activity_fbo_fence.xml  activity_t18.xml
app/src/main/res/layouts/other/layout/: activity_gl_preview_camera_with_record.xml  activity_native_opengles.xml  activity_test1.xml  fragment_gl_preview_camera_with_record.xml
app/src/main/res/raw/: camera2_t12_fragment.glsl  camera2_t12_fragment2.glsl  camera2_t12_vertex.glsl  camera2_t12_vertex2.glsl  camera2_t13_fragment.glsl  camera2_t13_fragment3.glsl  camera2_t13_vertex3.glsl  camera_t6_fragment.glsl  camera_t6_vertex.glsl  camera_t6_vertex2.glsl  fragment_camera_shader.glsl  fragment_test.glsl  fragment_test2.glsl  fragment_test4.glsl  fragment_test6.glsl  fragment_texture_shader.glsl  mediacodec_t2_fragment.glsl  mediacodec_t4_vertex.glsl  mytest1_fragment2.glsl  mytest1_vertex.glsl  normal2_t2_vertex.glsl  normal2_t4_vertex.glsl  normal_t11_vertex.glsl  normal_t12_fragment.glsl  normal_t12_vertex.glsl  normal_t13_fragment.glsl  normal_t13_vertex.glsl  normal_t14_fragment_draw.glsl  normal_t14_fragment_multi.glsl  normal_t14_vertex_draw.glsl  normal_t14_vertex_multi.glsl  normal_t16_fragment.glsl  normal_t16_vertex.glsl  vertex_camera_shader.glsl  vertex_test.glsl  vertex_texture_shader.glsl
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openglesdemo1/: ExampleUnitTest.kt
(+322 files in other folders)
